added AHBLite, APB, SPRAM, DPRAM, AXIStream sockets

--- a/ark.json5
+++ b/ark.json5
@@ -5,169 +5,300 @@
       reset_n: 1,
 
       // AMBA4.AXI4-Lite - Target
-      t_axi4l_awvalid: 1,
-      t_axi4l_awready: -1,
-      t_axi4l_awaddr: 20,
-      t_axi4l_awprot: 3,
-      t_axi4l_wvalid: 1,
-      t_axi4l_wready: -1,
-      t_axi4l_wdata: 32,
-      t_axi4l_wstrb: 4,
-      t_axi4l_bvalid: -1,
-      t_axi4l_bready: 1,
-      t_axi4l_bresp: -2,
-      t_axi4l_arvalid: 1,
-      t_axi4l_arready: -1,
-      t_axi4l_araddr: 20,
-      t_axi4l_arprot: 3,
-      t_axi4l_rvalid: -1,
-      t_axi4l_rready: 1,
-      t_axi4l_rdata: -32,
-      t_axi4l_rresp: -2,
+      t1_axi4lite_awvalid: 1,
+      t1_axi4lite_awready: -1,
+      t1_axi4lite_awaddr: 20,
+      t1_axi4lite_awprot: 3,
+      t1_axi4lite_wvalid: 1,
+      t1_axi4lite_wready: -1,
+      t1_axi4lite_wdata: 32,
+      t1_axi4lite_wstrb: 4,
+      t1_axi4lite_bvalid: -1,
+      t1_axi4lite_bready: 1,
+      t1_axi4lite_bresp: -2,
+      t1_axi4lite_arvalid: 1,
+      t1_axi4lite_arready: -1,
+      t1_axi4lite_araddr: 20,
+      t1_axi4lite_arprot: 3,
+      t1_axi4lite_rvalid: -1,
+      t1_axi4lite_rready: 1,
+      t1_axi4lite_rdata: -32,
+      t1_axi4lite_rresp: -2,
 
       // AMBA4.AXI4-Lite - Initiator
-      i_axi4l_awvalid: -1,
-      i_axi4l_awready: 1,
-      i_axi4l_awaddr: -20,
-      i_axi4l_awprot: -3,
-      i_axi4l_wvalid: -1,
-      i_axi4l_wready: 1,
-      i_axi4l_wdata: -32,
-      i_axi4l_wstrb: -4,
-      i_axi4l_bvalid: 1,
-      i_axi4l_bready: -1,
-      i_axi4l_bresp: 2,
-      i_axi4l_arvalid: -1,
-      i_axi4l_arready: 1,
-      i_axi4l_araddr: -20,
-      i_axi4l_arprot: -3,
-      i_axi4l_rvalid: 1,
-      i_axi4l_rready: -1,
-      i_axi4l_rdata: 32,
-      i_axi4l_rresp: 2,
+      i2_axi4lite_awvalid: -1,
+      i2_axi4lite_awready: 1,
+      i2_axi4lite_awaddr: -20,
+      i2_axi4lite_awprot: -3,
+      i2_axi4lite_wvalid: -1,
+      i2_axi4lite_wready: 1,
+      i2_axi4lite_wdata: -32,
+      i2_axi4lite_wstrb: -4,
+      i2_axi4lite_bvalid: 1,
+      i2_axi4lite_bready: -1,
+      i2_axi4lite_bresp: 2,
+      i2_axi4lite_arvalid: -1,
+      i2_axi4lite_arready: 1,
+      i2_axi4lite_araddr: -20,
+      i2_axi4lite_arprot: -3,
+      i2_axi4lite_rvalid: 1,
+      i2_axi4lite_rready: -1,
+      i2_axi4lite_rdata: 32,
+      i2_axi4lite_rresp: 2,
 
       // AMBA4.AXI4 - Target
-      t_axi4_ACLK: 1,
-      t_axi4_ARESETn: 1,
-      t_axi4_ARQOS: 1,
-      t_axi4_AWQOS: 1,
-      t_axi4_AWID: 12,
-      t_axi4_AWADDR: 37,
-      t_axi4_AWLEN: 8,
-      t_axi4_AWSIZE: 3,
-      t_axi4_AWBURST: 2,
-      t_axi4_AWVALID: 1,
-      t_axi4_AWCACHE_0: 1,
-      t_axi4_AWCOBUF: 1,
-      t_axi4_AWLOCK: 1,
-      t_axi4_AWALLSTRB: 1,
-      t_axi4_AWPROT: 2,
-      t_axi4_AWREGION: 2,
-      t_axi4_AWAPCMD: 1,
-      t_axi4_WLAST: 1,
-      t_axi4_WVALID: 1,
-      t_axi4_WDATA: 256,
-      t_axi4_WSTRB: 32,
-      t_axi4_BREADY: 1,
-      t_axi4_ARID: 12,
-      t_axi4_ARADDR: 37,
-      t_axi4_ARLEN: 8,
-      t_axi4_ARSIZE: 3,
-      t_axi4_ARBURST: 2,
-      t_axi4_ARVALID: 1,
-      t_axi4_ARLOCK: 1,
-      t_axi4_ARPROT: 2,
-      t_axi4_ARREGION: 2,
-      t_axi4_ARAPCMD: 1,
-      t_axi4_RREADY: 1,
-      t_axi4_AWREADY: -1,
-      t_axi4_WREADY: -1,
-      t_axi4_BID: -12,
-      t_axi4_BRESP: -2,
-      t_axi4_BVALID: -1,
-      t_axi4_ARREADY: -1,
-      t_axi4_RID: -12,
-      t_axi4_RLAST: -1,
-      t_axi4_RVALID: -1,
-      t_axi4_RDATA: -256,
-      t_axi4_RRESP: -2,
+      t3_axi4_ACLK: 1,
+      t3_axi4_ARESETn: 1,
+      t3_axi4_ARQOS: 1,
+      t3_axi4_AWQOS: 1,
+      t3_axi4_AWID: 12,
+      t3_axi4_AWADDR: 37,
+      t3_axi4_AWLEN: 8,
+      t3_axi4_AWSIZE: 3,
+      t3_axi4_AWBURST: 2,
+      t3_axi4_AWVALID: 1,
+      t3_axi4_AWCACHE_0: 1,
+      t3_axi4_AWCOBUF: 1,
+      t3_axi4_AWLOCK: 1,
+      t3_axi4_AWALLSTRB: 1,
+      t3_axi4_AWPROT: 2,
+      t3_axi4_AWREGION: 2,
+      t3_axi4_AWAPCMD: 1,
+      t3_axi4_WLAST: 1,
+      t3_axi4_WVALID: 1,
+      t3_axi4_WDATA: 256,
+      t3_axi4_WSTRB: 32,
+      t3_axi4_BREADY: 1,
+      t3_axi4_ARID: 12,
+      t3_axi4_ARADDR: 37,
+      t3_axi4_ARLEN: 8,
+      t3_axi4_ARSIZE: 3,
+      t3_axi4_ARBURST: 2,
+      t3_axi4_ARVALID: 1,
+      t3_axi4_ARLOCK: 1,
+      t3_axi4_ARPROT: 2,
+      t3_axi4_ARREGION: 2,
+      t3_axi4_ARAPCMD: 1,
+      t3_axi4_RREADY: 1,
+      t3_axi4_AWREADY: -1,
+      t3_axi4_WREADY: -1,
+      t3_axi4_BID: -12,
+      t3_axi4_BRESP: -2,
+      t3_axi4_BVALID: -1,
+      t3_axi4_ARREADY: -1,
+      t3_axi4_RID: -12,
+      t3_axi4_RLAST: -1,
+      t3_axi4_RVALID: -1,
+      t3_axi4_RDATA: -256,
+      t3_axi4_RRESP: -2,
 
       // AMBA4.AXI4 - Initiator
-      i_axi4_ACLK: -1,
-      i_axi4_ARESETn: -1,
-      i_axi4_ARQOS: -1,
-      i_axi4_AWQOS: -1,
-      i_axi4_AWID: -12,
-      i_axi4_AWADDR: -37,
-      i_axi4_AWLEN: -8,
-      i_axi4_AWSIZE: -3,
-      i_axi4_AWBURST: -2,
-      i_axi4_AWVALID: -1,
-      i_axi4_AWCACHE_0: -1,
-      i_axi4_AWCOBUF: -1,
-      i_axi4_AWLOCK: -1,
-      i_axi4_AWALLSTRB: -1,
-      i_axi4_AWPROT: -2,
-      i_axi4_AWREGION: -2,
-      i_axi4_AWAPCMD: -1,
-      i_axi4_WLAST: -1,
-      i_axi4_ARESETn: -1,
-      i_axi4_ARQOS: -1,
-      i_axi4_AWQOS: -1,
-      i_axi4_AWID: -12,
-      i_axi4_AWADDR: -37,
-      i_axi4_AWLEN: -8,
-      i_axi4_AWSIZE: -3,
-      i_axi4_AWBURST: -2,
-      i_axi4_AWVALID: -1,
-      i_axi4_AWCACHE_0: -1,
-      i_axi4_AWCOBUF: -1,
-      i_axi4_AWLOCK: -1,
-      i_axi4_AWALLSTRB: -1,
-      i_axi4_AWPROT: -2,
-      i_axi4_AWREGION: -2,
-      i_axi4_AWAPCMD: -1,
-      i_axi4_WLAST: -1,
-      i_axi4_WVALID: -1,
-      i_axi4_WDATA: -256,
-      i_axi4_WSTRB: -32,
-      i_axi4_BREADY: -1,
-      i_axi4_ARID: -12,
-      i_axi4_ARADDR: -37,
-      i_axi4_ARLEN: -8,
-      i_axi4_ARSIZE: -3,
-      i_axi4_ARBURST: -2,
-      i_axi4_ARVALID: -1,
-      i_axi4_ARLOCK: -1,
-      i_axi4_ARPROT: -2,
-      i_axi4_ARREGION: -2,
-      i_axi4_ARAPCMD: -1,
-      i_axi4_RREADY: -1,
-      i_axi4_AWREADY: 1,
-      i_axi4_WREADY: 1,
-      i_axi4_BID: 12,
-      i_axi4_BRESP: 2,
-      i_axi4_BVALID: 1,
-      i_axi4_ARREADY: 1,
-      i_axi4_RID: 12,
-      i_axi4_RLAST: 1,
-      i_axi4_RVALID: 1,
-      i_axi4_RDATA: 256,
-      i_axi4_RRESP: 2,
+      i4_axi4_ACLK: 1,
+      i4_axi4_ARESETn: 1,
+      i4_axi4_ARQOS: -1,
+      i4_axi4_AWQOS: -1,
+      i4_axi4_AWID: -12,
+      i4_axi4_AWADDR: -37,
+      i4_axi4_AWLEN: -8,
+      i4_axi4_AWSIZE: -3,
+      i4_axi4_AWBURST: -2,
+      i4_axi4_AWVALID: -1,
+      i4_axi4_AWCACHE_0: -1,
+      i4_axi4_AWCOBUF: -1,
+      i4_axi4_AWLOCK: -1,
+      i4_axi4_AWALLSTRB: -1,
+      i4_axi4_AWPROT: -2,
+      i4_axi4_AWREGION: -2,
+      i4_axi4_AWAPCMD: -1,
+      i4_axi4_WLAST: -1,
+      i4_axi4_ARESETn: -1,
+      i4_axi4_ARQOS: -1,
+      i4_axi4_AWQOS: -1,
+      i4_axi4_AWID: -12,
+      i4_axi4_AWADDR: -37,
+      i4_axi4_AWLEN: -8,
+      i4_axi4_AWSIZE: -3,
+      i4_axi4_AWBURST: -2,
+      i4_axi4_AWVALID: -1,
+      i4_axi4_AWCACHE_0: -1,
+      i4_axi4_AWCOBUF: -1,
+      i4_axi4_AWLOCK: -1,
+      i4_axi4_AWALLSTRB: -1,
+      i4_axi4_AWPROT: -2,
+      i4_axi4_AWREGION: -2,
+      i4_axi4_AWAPCMD: -1,
+      i4_axi4_WLAST: -1,
+      i4_axi4_WVALID: -1,
+      i4_axi4_WDATA: -256,
+      i4_axi4_WSTRB: -32,
+      i4_axi4_BREADY: -1,
+      i4_axi4_ARID: -12,
+      i4_axi4_ARADDR: -37,
+      i4_axi4_ARLEN: -8,
+      i4_axi4_ARSIZE: -3,
+      i4_axi4_ARBURST: -2,
+      i4_axi4_ARVALID: -1,
+      i4_axi4_ARLOCK: -1,
+      i4_axi4_ARPROT: -2,
+      i4_axi4_ARREGION: -2,
+      i4_axi4_ARAPCMD: -1,
+      i4_axi4_RREADY: -1,
+      i4_axi4_AWREADY: 1,
+      i4_axi4_WREADY: 1,
+      i4_axi4_BID: 12,
+      i4_axi4_BRESP: 2,
+      i4_axi4_BVALID: 1,
+      i4_axi4_ARREADY: 1,
+      i4_axi4_RID: 12,
+      i4_axi4_RLAST: 1,
+      i4_axi4_RVALID: 1,
+      i4_axi4_RDATA: 256,
+      i4_axi4_RRESP: 2,
 
-      // AMBA4.AHB-Lite - Target
+      // AMBA5.AHB-Lite - Target
+      // t5_ahblite_HCLK: 1, // opt
+      // t5_ahblite_HRESETn: 1, // opt
+      t5_ahblite_HADDR: 32,
+      t5_ahblite_HBURST: 3,
+      t5_ahblite_HMASTLOCK: 1, // opt
+      t5_ahblite_HPROT: 4, // opt
+      t5_ahblite_HSIZE: 3,
+      t5_ahblite_HTRANS: 2,
+      t5_ahblite_HWDATA: 32,
+      t5_ahblite_HWRITE: 1,
+      t5_ahblite_HRDATA: -32,
+      t5_ahblite_HREADYOUT: -1,
+      t5_ahblite_HRESP: -1,
+      t5_ahblite_HSELx: 1,
+      t5_ahblite_HREADY: 1,
+      t5_ahblite_HCLKEN: 1, // opt
+      t5_ahblite_HRUSER: -6, // opt
+      t5_ahblite_HWUSER: 4, // opt
+      t5_ahblite_HAUSER: 4, // opt
 
       // AMBA4.AHB-Lite - Initiator
+      // i6_ahblite_HCLK: 1, // opt
+      // i6_ahblite_HRESETn: 1, // opt
+      i6_ahblite_HADDR: -32,
+      i6_ahblite_HBURST: -3,
+      i6_ahblite_HMASTLOCK: -1, // opt
+      i6_ahblite_HPROT: -4, // opt
+      i6_ahblite_HSIZE: -3,
+      i6_ahblite_HTRANS: -2,
+      i6_ahblite_HWDATA: -32,
+      i6_ahblite_HWRITE: -1,
+      i6_ahblite_HRDATA: 32,
+      i6_ahblite_HREADYOUT: 1,
+      i6_ahblite_HRESP: 1,
+      i6_ahblite_HSELx: -1,
+      i6_ahblite_HREADY: -1,
+      i6_ahblite_HCLKEN: -1, // opt
+      i6_ahblite_HRUSER: 6, // opt
+      i6_ahblite_HWUSER: -4, // opt
+      i6_ahblite_HAUSER: -4, // opt
+
       // AMBA3.APB - Target
+      // t7_apb_PCLK: 1, // opt
+      // t7_apb_PRESETn: 1, // opt
+      t7_apb_PADDR: 12,
+      t7_apb_PSELx: 1,
+      t7_apb_PENABLE: 1,
+      t7_apb_PWRITE: 1,
+      t7_apb_PRDATA: -32,
+      t7_apb_PWDATA: 32,
+      t7_apb_PPROT: 3, // opt
+      // t7_apb_PSTRB: 4, // opt
+      t7_apb_PREADY: -1, // opt
+      t7_apb_PSLVERR: -1, // opt
+      // t7_apb_PCLKEN: 1, // opt
+
       // AMBA3.APB - Initiator
+      // i8_apb_PCLK: 1, // opt
+      // i8_apb_PRESETn: 1, // opt
+      i8_apb_PADDR: -12,
+      i8_apb_PSELx: -1,
+      i8_apb_PENABLE: -1,
+      i8_apb_PWRITE: -1,
+      i8_apb_PRDATA: 32,
+      i8_apb_PWDATA: -32,
+      i8_apb_PPROT: -3, // opt
+      // i8_apb_PSTRB: -4, // opt
+      i8_apb_PREADY: 1, // opt
+      i8_apb_PSLVERR: 1, // opt
+      // i8_apb_PCLKEN: -1, // opt
+
       // MEM.SPRAM - Target
+      // t9_spram_CLK: 1,
+      t9_spram_WREN: 1,
+      t9_spram_RDEN: 1,
+      t9_spram_BEN: 1,
+      t9_spram_ADDR: 16,
+      t9_spram_WRDATA: 8,
+      t9_spram_RDDATA: -8,
+
       // MEM.SPRAM - Initiator
+      // i10_spram_CLK: 1,
+      i10_spram_WREN: -1,
+      i10_spram_RDEN: -1,
+      i10_spram_BEN: -1,
+      i10_spram_ADDR: -16,
+      i10_spram_WRDATA: -8,
+      i10_spram_RDDATA: 8,
+
       // MEM.DPRAM - Target
+      // t11_dpram_WRCLK: 1,
+      // t11_dpram_RDCLK: 1,
+      t11_dpram_WREN: 1,
+      t11_dpram_RDEN: 1,
+      t11_dpram_BEN: 1,
+      t11_dpram_WRADDR: 16,
+      t11_dpram_WRDATA: 8,
+      t11_dpram_RDADDR: 16,
+      t11_dpram_RDDATA: -8,
+      // t11_dpram_RDERR: 1,
+
       // MEM.DPRAM - Initiator
+      // i12_dpram_WRCLK: 1,
+      // i12_dpram_RDCLK: 1,
+      i12_dpram_WREN: -1,
+      i12_dpram_RDEN: -1,
+      i12_dpram_BEN: -1,
+      i12_dpram_WRADDR: -16,
+      i12_dpram_WRDATA: -8,
+      i12_dpram_RDADDR: -16,
+      i12_dpram_RDDATA: 8,
+      // i12_dpram_RDERR: -1,
+
+      // AMBA4.AXI4Stream - Target
+      // t13_stream_ACLK: 1, // opt
+      // t13_stream_ACLKEN: 1, // opt
+      // t13_stream_ARESETn: 1, // opt
+      t13_stream_TVALID: 1,
+      t13_stream_TREADY: -1, // opt
+      t13_stream_TDATA: 16, // opt
+      // t13_stream_TSTRB: 2, // opt
+      // t13_stream_TKEEP: 2, // opt
+      t13_stream_TLAST: 1, // opt
+      // t13_stream_TID: 4, // opt
+      // t13_stream_TDEST: 4, // opt
+      // t13_stream_TUSER: 4, // opt
+
+      // AMBA4.AXI4Stream - Initiator
+      // i14_stream_ACLK: -1, // opt
+      // i14_stream_ACLKEN: -1, // opt
+      // i14_stream_ARESETn: -1, // opt
+      i14_stream_TVALID: -1,
+      i14_stream_TREADY: 1, // opt
+      i14_stream_TDATA: -16, // opt
+      // i14_stream_TSTRB: -2, // opt
+      // i14_stream_TKEEP: -2, // opt
+      i14_stream_TLAST: -1, // opt
+      i14_stream_TID: -4, // opt
+      // i14_stream_TDEST: -4, // opt
+      // i14_stream_TUSER: -4, // opt
+
       // TileLink - Target
       // TileLink - Initiator
-      // AMBA4.AXI4Stream - Target
-      // AMBA4.AXI4Stream - Initiator
     },
   },
   component: {
