--- a/ark.json5
+++ b/ark.json5
@@ -9,17 +9,21 @@
       t1_axi4lite_awready: -1,
       t1_axi4lite_awaddr: 20,
       t1_axi4lite_awprot: 3,
+
       t1_axi4lite_wvalid: 1,
       t1_axi4lite_wready: -1,
       t1_axi4lite_wdata: 32,
       t1_axi4lite_wstrb: 4,
+
       t1_axi4lite_bvalid: -1,
       t1_axi4lite_bready: 1,
       t1_axi4lite_bresp: -2,
+
       t1_axi4lite_arvalid: 1,
       t1_axi4lite_arready: -1,
       t1_axi4lite_araddr: 20,
       t1_axi4lite_arprot: 3,
+
       t1_axi4lite_rvalid: -1,
       t1_axi4lite_rready: 1,
       t1_axi4lite_rdata: -32,
@@ -30,33 +34,37 @@
       i2_axi4lite_awready: 1,
       i2_axi4lite_awaddr: -20,
       i2_axi4lite_awprot: -3,
+
       i2_axi4lite_wvalid: -1,
       i2_axi4lite_wready: 1,
       i2_axi4lite_wdata: -32,
       i2_axi4lite_wstrb: -4,
+
       i2_axi4lite_bvalid: 1,
       i2_axi4lite_bready: -1,
       i2_axi4lite_bresp: 2,
+
       i2_axi4lite_arvalid: -1,
       i2_axi4lite_arready: 1,
       i2_axi4lite_araddr: -20,
       i2_axi4lite_arprot: -3,
+
       i2_axi4lite_rvalid: 1,
       i2_axi4lite_rready: -1,
       i2_axi4lite_rdata: 32,
       i2_axi4lite_rresp: 2,
 
       // AMBA4.AXI4 - Target
-      t3_axi4_ACLK: 1,
-      t3_axi4_ARESETn: 1,
-      t3_axi4_ARQOS: 1,
-      t3_axi4_AWQOS: 1,
-      t3_axi4_AWID: 12,
+      // t3_axi4_ACLK: 1,
+      // t3_axi4_ARESETn: 1,
+      t3_axi4_AWVALID: 1,
+      t3_axi4_AWREADY: -1,
+      t3_axi4_AWID: 12, // opt
       t3_axi4_AWADDR: 37,
       t3_axi4_AWLEN: 8,
       t3_axi4_AWSIZE: 3,
+      t3_axi4_AWQOS: 1,
       t3_axi4_AWBURST: 2,
-      t3_axi4_AWVALID: 1,
       t3_axi4_AWCACHE_0: 1,
       t3_axi4_AWCOBUF: 1,
       t3_axi4_AWLOCK: 1,
@@ -64,94 +72,84 @@
       t3_axi4_AWPROT: 2,
       t3_axi4_AWREGION: 2,
       t3_axi4_AWAPCMD: 1,
-      t3_axi4_WLAST: 1,
-      t3_axi4_WVALID: 1,
-      t3_axi4_WDATA: 256,
-      t3_axi4_WSTRB: 32,
-      t3_axi4_BREADY: 1,
+
+      t3_axi4_ARVALID: 1,
+      t3_axi4_ARREADY: -1,
+      t3_axi4_ARQOS: 1,
       t3_axi4_ARID: 12,
       t3_axi4_ARADDR: 37,
       t3_axi4_ARLEN: 8,
       t3_axi4_ARSIZE: 3,
       t3_axi4_ARBURST: 2,
-      t3_axi4_ARVALID: 1,
       t3_axi4_ARLOCK: 1,
       t3_axi4_ARPROT: 2,
       t3_axi4_ARREGION: 2,
       t3_axi4_ARAPCMD: 1,
-      t3_axi4_RREADY: 1,
-      t3_axi4_AWREADY: -1,
+
+      t3_axi4_WVALID: 1,
       t3_axi4_WREADY: -1,
+      t3_axi4_WLAST: 1,
+      t3_axi4_WDATA: 256,
+      t3_axi4_WSTRB: 32,
+
+      t3_axi4_BVALID: -1,
+      t3_axi4_BREADY: 1,
       t3_axi4_BID: -12,
       t3_axi4_BRESP: -2,
-      t3_axi4_BVALID: -1,
-      t3_axi4_ARREADY: -1,
+
+      t3_axi4_RVALID: -1,
+      t3_axi4_RREADY: 1,
       t3_axi4_RID: -12,
       t3_axi4_RLAST: -1,
-      t3_axi4_RVALID: -1,
       t3_axi4_RDATA: -256,
       t3_axi4_RRESP: -2,
 
       // AMBA4.AXI4 - Initiator
-      i4_axi4_ACLK: 1,
-      i4_axi4_ARESETn: 1,
-      i4_axi4_ARQOS: -1,
+      // i4_axi4_ACLK: 1,
+      // i4_axi4_ARESETn: -1,
+
+      i4_axi4_AWVALID: -1,
+      i4_axi4_AWREADY: 1,
       i4_axi4_AWQOS: -1,
-      i4_axi4_AWID: -12,
       i4_axi4_AWADDR: -37,
       i4_axi4_AWLEN: -8,
       i4_axi4_AWSIZE: -3,
       i4_axi4_AWBURST: -2,
-      i4_axi4_AWVALID: -1,
       i4_axi4_AWCACHE_0: -1,
       i4_axi4_AWCOBUF: -1,
       i4_axi4_AWLOCK: -1,
       i4_axi4_AWALLSTRB: -1,
       i4_axi4_AWPROT: -2,
       i4_axi4_AWREGION: -2,
-      i4_axi4_AWAPCMD: -1,
-      i4_axi4_WLAST: -1,
-      i4_axi4_ARESETn: -1,
-      i4_axi4_ARQOS: -1,
-      i4_axi4_AWQOS: -1,
-      i4_axi4_AWID: -12,
-      i4_axi4_AWADDR: -37,
-      i4_axi4_AWLEN: -8,
-      i4_axi4_AWSIZE: -3,
-      i4_axi4_AWBURST: -2,
-      i4_axi4_AWVALID: -1,
-      i4_axi4_AWCACHE_0: -1,
-      i4_axi4_AWCOBUF: -1,
-      i4_axi4_AWLOCK: -1,
-      i4_axi4_AWALLSTRB: -1,
-      i4_axi4_AWPROT: -2,
-      i4_axi4_AWREGION: -2,
-      i4_axi4_AWAPCMD: -1,
-      i4_axi4_WLAST: -1,
-      i4_axi4_WVALID: -1,
-      i4_axi4_WDATA: -256,
-      i4_axi4_WSTRB: -32,
-      i4_axi4_BREADY: -1,
+
+      i4_axi4_ARVALID: -1,
+      i4_axi4_ARREADY: 1,
       i4_axi4_ARID: -12,
       i4_axi4_ARADDR: -37,
       i4_axi4_ARLEN: -8,
       i4_axi4_ARSIZE: -3,
       i4_axi4_ARBURST: -2,
-      i4_axi4_ARVALID: -1,
       i4_axi4_ARLOCK: -1,
       i4_axi4_ARPROT: -2,
       i4_axi4_ARREGION: -2,
       i4_axi4_ARAPCMD: -1,
-      i4_axi4_RREADY: -1,
-      i4_axi4_AWREADY: 1,
+      i4_axi4_ARQOS: -1,
+
+      i4_axi4_WVALID: -1,
       i4_axi4_WREADY: 1,
+      i4_axi4_WLAST: -1,
+      i4_axi4_WDATA: -256,
+      i4_axi4_WSTRB: -32,
+
+      i4_axi4_BVALID: 1,
+      i4_axi4_BREADY: -1,
       i4_axi4_BID: 12,
       i4_axi4_BRESP: 2,
-      i4_axi4_BVALID: 1,
-      i4_axi4_ARREADY: 1,
+
+      i4_axi4_RVALID: 1,
+      i4_axi4_RREADY: -1,
       i4_axi4_RID: 12,
       i4_axi4_RLAST: 1,
-      i4_axi4_RVALID: 1,
       i4_axi4_RDATA: 256,
       i4_axi4_RRESP: 2,
 
