--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "block-ark",
   "version": "1.0.0",
   "description": "block with all sorts of bus interfaces",
-  "main": "index.js",
+  "main": "ark.full.json5",
   "scripts": {
     "test": "duh val ark.json5"
   },
