--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "block-ark",
+  "name": "@sifive/block-ark",
   "version": "1.0.0",
   "description": "block with all sorts of bus interfaces",
   "main": "ark.full.json5",
@@ -10,13 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/sifive/block-ark.git"
   },
-  "author": "",
+  "author": "SiFive Inc.",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/sifive/block-ark/issues"
   },
   "homepage": "https://github.com/sifive/block-ark#readme",
   "devDependencies": {
-    "duh": "github:sifive/duh"
+    "duh": "^1.7.1"
   }
 }
